@@ -1,3 +1,8 @@
+2005/02/08 01:05 (-0400) muppetman
+
+	* t/GtkComboBox.t: Fix gtk+ assertions by setting the combobox up
+	properly.
+
 2005/02/08 00:15 (-0400) muppetman
 
 	* xs/GdkPixbuf.xs, t/GdkPixbuf.t: bind and test gdk_pixbuf_get_option
